@@ -33,5 +33,10 @@
     <a href="blah.html" class="link">link 1</a>
     <a href="blah.html" class="link">link 2</a>
     <a href="blah.html" class="link">link 3</a>
+    
+    <input class="checkbox" type="checkbox" value="checkbox 1"/>
+    <input class="checkbox" type="checkbox" value="checkbox 2"/>
+    <input class="checkbox" type="checkbox" value="checkbox 3"/>
+
   </body>
 </html>
