@@ -88,6 +88,12 @@ describe PageObject::ElementLocators do
       element = watir_page_object.checkbox_element(:id => 'blah')
       element.should be_instance_of PageObject::Elements::CheckBox
     end
+
+    it "should find all check box elements" do
+      watir_browser.should_receive(:checkboxes).with(:id => 'blah').and_return([watir_browser])
+      elements = watir_page_object.checkbox_elements(:id => 'blah')
+      elements[0].should be_instance_of PageObject::Elements::CheckBox 
+    end
     
     it "should find a radio button" do
       watir_browser.should_receive(:radio).with(:id => 'blah').and_return(watir_browser)
@@ -279,6 +285,12 @@ describe PageObject::ElementLocators do
       selenium_browser.should_receive(:find_element).with(:id, 'blah').and_return(selenium_browser)
       element = selenium_page_object.checkbox_element(:id => 'blah')
       element.should be_instance_of PageObject::Elements::CheckBox
+    end
+
+    it "should find all checkbox elements" do
+      selenium_browser.should_receive(:find_elements).with(:id, 'blah').and_return([selenium_browser])
+      elements = selenium_page_object.checkbox_elements(:id => 'blah')
+      elements[0].should be_instance_of PageObject::Elements::CheckBox 
     end
     
     it "should find a radio button" do
